Replaced URI with URL checking (ABAHN-134)
git-svn-id: svn+ssh://svn.geant.net/GEANT/SA2/AutoBAHN/AutoBAHN-base/trunk@2985 70dc47f8-d969-49c3-b45f-d65fb9ce666a