@@ -1,7 +1,7 @@
 package net.geant.autobahn.idm2dm;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.MalformedURLException;
 
 import net.geant.autobahn.constraints.DomainConstraints;
 import net.geant.autobahn.idm2dm.ConstraintsAlreadyUsedException;
@@ -32,9 +32,9 @@ public class Idm2DmClient implements Idm2Dm {
         }
         
         try {
-            new URI(endPoint);
-            log.debug("DM location seems a valid URI, trying to connect to it");
-        } catch (URISyntaxException e) {
+            new URL(endPoint);
+            log.debug("DM location seems a valid URL, trying to connect to it");
+        } catch (MalformedURLException e) {
             log.error("No valid DM location ("+ endPoint +") could be found, IDM->DM communication impossible");
             return;
         }
